# shorelark-simulation-wasm

./: Cargo.toml
src/: animal.rs  food.rs  lib.rs  world.rs
