[package]
name = "lib-simulation-wasm"
version = "0.1.0"
authors = ["Benjamin Doerry <ben.doerry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"]}
rand = "0.8"
wasm-bindgen = "0.2"

lib-simulation = { path = "../simulation" }
